# android_backup_app

./: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  imgui.ini
html/: _backup_page_8h_source.html  _device_page_8h_source.html  _explorer_windows_8h_source.html  annotated.html  class_explorer_windows-members.html  class_explorer_windows.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html
html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js
latex/: _backup_page_8h_source.tex  _device_page_8h_source.tex  _explorer_windows_8h_source.tex  annotated.tex  class_explorer_windows.tex  files.tex  refman.tex
rtf/: refman.rtf
src/: BackupPage.cpp  BackupPage.h  DevicePage.cpp  DevicePage.h  ExplorerWindows.cpp  ExplorerWindows.h  HistoryPage.cpp  HistoryPage.h  SettingsPage.cpp  SettingsPage.h  main.cpp  mainwindow.h
src/utils/: TextureLoader.cpp  TextureLoader.h
